fixed spacing

--- a/about.css
+++ b/about.css
@@ -1,7 +1,7 @@
 .about-me {
     display: flex;
     flex-wrap: wrap;
-    margin-top: 20%;
+    margin-top: 15%;
 }
 
 .man {
